// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`visual regression > bedroom-closet renders consistently 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 1246.17" width="1200" height="1246.17">
<rect x="0" y="0" width="1200" height="1246.17" fill="white"/>
<g class="layer-structural">
<g class="walls">
<rect x="170.75" y="170.75" width="858.5" height="30.83" stroke="none" fill="#000"/>
<g fill="#000" stroke="none">
<rect x="170.75" y="884.58" width="315.42" height="30.83"/>
<rect x="656.92" y="884.58" width="372.33" height="30.83"/>
</g>
<g fill="#000" stroke="none">
<rect x="998.42" y="656.92" width="30.83" height="227.67"/>
<rect x="998.42" y="201.58" width="30.83" height="227.67"/>
</g>
<rect x="170.75" y="201.58" width="30.83" height="683" stroke="none" fill="#000"/>
<g fill="#333" stroke="none">
<rect x="407.91" y="486.17" width="21.34" height="56.92"/>
<rect x="407.91" y="201.58" width="21.34" height="142.29"/>
</g>
<rect x="201.58" y="521.74" width="227.67" height="21.34" stroke="none" fill="#333"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="656.92" y1="915.42" x2="656.92" y2="744.66"/>
<path d="M 656.92,744.66 A 170.75,170.75 0 0,0 486.17,915.42"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="1006.13" y1="656.92" x2="1006.13" y2="429.25"/>
<line x1="1021.54" y1="656.92" x2="1021.54" y2="429.25"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="407.91" y1="486.17" x2="265.61" y2="486.17"/>
<path d="M 265.61,486.17 A 142.29,142.29 0 0,1 407.91,343.87"/>
</g>
</g>
<g class="layer-labels">
<text x="600" y="543.08" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="28.46" font-weight="500" text-anchor="middle" dominant-baseline="central">Primary Bedroom</text>
<text x="315.42" y="372.33" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="28.46" font-weight="500" text-anchor="middle" dominant-baseline="central">Walk-in Closet</text>
</g>
<g class="layer-dimensions">
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="201.58" y1="998.42" x2="998.42" y2="998.42"/>
<line x1="193.04" y1="1006.96" x2="210.12" y2="989.88"/>
<line x1="989.88" y1="1006.96" x2="1006.96" y2="989.88"/>
<text x="600" y="984.19" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="19.92" text-anchor="middle">14&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="87.75" y1="884.58" x2="87.75" y2="201.58"/>
<line x1="79.21" y1="893.12" x2="96.28" y2="876.05"/>
<line x1="79.21" y1="210.12" x2="96.28" y2="193.04"/>
<text x="73.52" y="543.08" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="19.92" text-anchor="middle" transform="rotate(-90, 73.52, 543.08)">12&apos;-0&quot;</text>
</g>
</g>
<g class="layer-title-block">
<g class="title-block" font-family="'Helvetica','Arial',sans-serif" fill="#000">
<rect x="830" y="1086.17" width="350" height="140" stroke="#000" stroke-width="0.50" fill="white"/>
<line x1="830" y1="1176.17" x2="1180" y2="1176.17" stroke="#000" stroke-width="0.35"/>
<text x="842" y="1110.17" font-size="18" font-weight="bold">Bedroom with Closet</text>
<text x="842" y="1214.17" font-size="12">Scale: 1/4in = 1ft</text>
<text x="1015" y="1214.17" fill="#666" font-size="10">FloorScript v0.1</text>
</g>
</g>
</svg>"
`;

exports[`visual regression > bedroom-nook renders consistently 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 1416.92" width="1200" height="1416.92">
<rect x="0" y="0" width="1200" height="1416.92" fill="white"/>
<g class="layer-structural">
<g class="walls">
<g fill="#000" stroke="none">
<rect x="170.75" y="341.5" width="429.25" height="30.83"/>
<rect x="884.58" y="341.5" width="144.66" height="30.83"/>
</g>
<g fill="#000" stroke="none">
<rect x="170.75" y="1055.34" width="144.66" height="30.83"/>
<rect x="486.17" y="1055.34" width="543.08" height="30.83"/>
</g>
<g fill="#000" stroke="none">
<rect x="998.42" y="827.67" width="30.83" height="227.67"/>
<rect x="998.42" y="372.33" width="30.83" height="227.67"/>
</g>
<rect x="170.75" y="372.33" width="30.83" height="683" stroke="none" fill="#000"/>
<g fill="#333" stroke="none">
<rect x="407.91" y="656.92" width="21.34" height="56.92"/>
<rect x="407.91" y="372.33" width="21.34" height="142.29"/>
</g>
<rect x="201.58" y="692.49" width="227.67" height="21.34" stroke="none" fill="#333"/>
<g fill="#000" stroke="none">
<rect x="569.17" y="170.75" width="59.29" height="30.83"/>
<rect x="856.13" y="170.75" width="59.29" height="30.83"/>
</g>
<rect x="884.58" y="201.58" width="30.83" height="170.75" stroke="none" fill="#000"/>
<rect x="569.17" y="201.58" width="30.83" height="170.75" stroke="none" fill="#000"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="486.17" y1="1086.17" x2="486.17" y2="915.42"/>
<path d="M 486.17,915.42 A 170.75,170.75 0 0,0 315.42,1086.17"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="1006.13" y1="827.67" x2="1006.13" y2="600"/>
<line x1="1021.54" y1="827.67" x2="1021.54" y2="600"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="407.91" y1="656.92" x2="265.61" y2="656.92"/>
<path d="M 265.61,656.92 A 142.29,142.29 0 0,1 407.91,514.62"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="628.46" y1="178.46" x2="856.13" y2="178.46"/>
<line x1="628.46" y1="193.87" x2="856.13" y2="193.87"/>
</g>
</g>
<g class="layer-labels">
<text x="600" y="713.83" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="28.46" font-weight="500" text-anchor="middle" dominant-baseline="central">Primary Bedroom</text>
<text x="315.42" y="543.08" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="28.46" font-weight="500" text-anchor="middle" dominant-baseline="central">Walk-in Closet</text>
<text x="742.29" y="286.96" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="28.46" font-weight="500" text-anchor="middle" dominant-baseline="central">Window Nook</text>
</g>
<g class="layer-dimensions">
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="201.58" y1="1169.17" x2="998.42" y2="1169.17"/>
<line x1="193.04" y1="1177.71" x2="210.12" y2="1160.63"/>
<line x1="989.88" y1="1177.71" x2="1006.96" y2="1160.63"/>
<text x="600" y="1154.94" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="19.92" text-anchor="middle">14&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="87.75" y1="1055.34" x2="87.75" y2="372.33"/>
<line x1="79.21" y1="1063.87" x2="96.28" y2="1046.8"/>
<line x1="79.21" y1="380.87" x2="96.28" y2="363.79"/>
<text x="73.52" y="713.83" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="19.92" text-anchor="middle" transform="rotate(-90, 73.52, 713.83)">12&apos;-0&quot;</text>
</g>
</g>
<g class="layer-title-block">
<g class="title-block" font-family="'Helvetica','Arial',sans-serif" fill="#000">
<rect x="830" y="1256.92" width="350" height="140" stroke="#000" stroke-width="0.50" fill="white"/>
<line x1="830" y1="1346.92" x2="1180" y2="1346.92" stroke="#000" stroke-width="0.35"/>
<text x="842" y="1280.92" font-size="18" font-weight="bold">Bedroom with Closet and Window Nook</text>
<text x="842" y="1384.92" font-size="12">Scale: 1/4in = 1ft</text>
<text x="1015" y="1384.92" fill="#666" font-size="10">FloorScript v0.1</text>
</g>
</g>
</svg>"
`;

exports[`visual regression > kitchen-reno existing plan renders consistently 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 1232.85" width="1200" height="1232.85">
<rect x="0" y="0" width="1200" height="1232.85" fill="white"/>
<g class="layer-structural">
<g class="walls">
<rect x="190.73" y="190.73" width="818.54" height="31.79" stroke="none" fill="#000"/>
<rect x="190.73" y="858.28" width="818.54" height="23.84" stroke="none" fill="#333"/>
<rect x="985.43" y="222.52" width="23.84" height="635.76" stroke="none" fill="#333"/>
<g fill="#000" stroke="none">
<rect x="190.73" y="667.55" width="31.79" height="190.73"/>
<rect x="190.73" y="222.52" width="31.79" height="190.73"/>
</g>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="198.68" y1="667.55" x2="198.68" y2="413.25"/>
<line x1="214.57" y1="667.55" x2="214.57" y2="413.25"/>
</g>
</g>
<g class="layer-labels">
<text x="603.97" y="540.4" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="31.79" font-weight="500" text-anchor="middle" dominant-baseline="central">Kitchen</text>
</g>
<g class="layer-dimensions">
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="222.52" y1="985.43" x2="985.43" y2="985.43"/>
<line x1="212.98" y1="994.97" x2="232.05" y2="975.89"/>
<line x1="975.89" y1="994.97" x2="994.97" y2="975.89"/>
<text x="603.97" y="969.54" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="22.25" text-anchor="middle">12&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="95.36" y1="858.28" x2="95.36" y2="222.52"/>
<line x1="85.83" y1="867.81" x2="104.9" y2="848.74"/>
<line x1="85.83" y1="232.05" x2="104.9" y2="212.98"/>
<text x="79.47" y="540.4" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="22.25" text-anchor="middle" transform="rotate(-90, 79.47, 540.4)">10&apos;-0&quot;</text>
</g>
</g>
<g class="layer-title-block">
<g class="title-block" font-family="'Helvetica','Arial',sans-serif" fill="#000">
<rect x="830" y="1072.85" width="350" height="140" stroke="#000" stroke-width="0.50" fill="white"/>
<line x1="830" y1="1162.85" x2="1180" y2="1162.85" stroke="#000" stroke-width="0.35"/>
<text x="842" y="1096.85" font-size="18" font-weight="bold">Kitchen Renovation - 123 Main St</text>
<text x="842" y="1118.85" font-size="13">123 Main Street, Anytown, ST 12345</text>
<text x="842" y="1138.85" font-size="13">Jane Smith</text>
<text x="842" y="1182.85" font-size="12">Sheet: A1</text>
<text x="1015" y="1182.85" font-size="12">Date: 2026-02-11</text>
<text x="842" y="1200.85" font-size="12">Scale: 1/4in = 1ft</text>
<text x="1015" y="1200.85" fill="#666" font-size="10">FloorScript v0.1</text>
</g>
</g>
</svg>"
`;

exports[`visual regression > kitchen-reno proposed plan renders consistently 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 1232.85" width="1200" height="1232.85">
<rect x="0" y="0" width="1200" height="1232.85" fill="white"/>
<g class="layer-structural">
<g class="walls">
<rect x="190.73" y="190.73" width="818.54" height="31.79" stroke="none" fill="#000"/>
<rect x="190.73" y="858.28" width="818.54" height="23.84" stroke="none" fill="#333"/>
<rect x="985.43" y="731.13" width="23.84" height="127.15" stroke="none" fill="#333"/>
<g fill="#000" stroke="none">
<rect x="190.73" y="667.55" width="31.79" height="190.73"/>
<rect x="190.73" y="222.52" width="31.79" height="190.73"/>
</g>
</g>
<g class="opening cased-opening" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="985.43" y1="731.13" x2="1009.27" y2="731.13"/>
<line x1="985.43" y1="731.13" x2="985.43" y2="766.89"/>
<line x1="1009.27" y1="731.13" x2="1009.27" y2="766.89"/>
<line x1="985.43" y1="222.52" x2="1009.27" y2="222.52"/>
<line x1="985.43" y1="222.52" x2="985.43" y2="186.75"/>
<line x1="1009.27" y1="222.52" x2="1009.27" y2="186.75"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="198.68" y1="667.55" x2="198.68" y2="413.25"/>
<line x1="214.57" y1="667.55" x2="214.57" y2="413.25"/>
</g>
</g>
<g class="layer-labels">
<text x="603.97" y="540.4" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="31.79" font-weight="500" text-anchor="middle" dominant-baseline="central">Kitchen</text>
</g>
<g class="layer-dimensions">
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="222.52" y1="985.43" x2="985.43" y2="985.43"/>
<line x1="212.98" y1="994.97" x2="232.05" y2="975.89"/>
<line x1="975.89" y1="994.97" x2="994.97" y2="975.89"/>
<text x="603.97" y="969.54" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="22.25" text-anchor="middle">12&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="95.36" y1="858.28" x2="95.36" y2="222.52"/>
<line x1="85.83" y1="867.81" x2="104.9" y2="848.74"/>
<line x1="85.83" y1="232.05" x2="104.9" y2="212.98"/>
<text x="79.47" y="540.4" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="22.25" text-anchor="middle" transform="rotate(-90, 79.47, 540.4)">10&apos;-0&quot;</text>
</g>
</g>
<g class="layer-title-block">
<g class="title-block" font-family="'Helvetica','Arial',sans-serif" fill="#000">
<rect x="830" y="1072.85" width="350" height="140" stroke="#000" stroke-width="0.50" fill="white"/>
<line x1="830" y1="1162.85" x2="1180" y2="1162.85" stroke="#000" stroke-width="0.35"/>
<text x="842" y="1096.85" font-size="18" font-weight="bold">Kitchen Renovation - 123 Main St</text>
<text x="842" y="1118.85" font-size="13">123 Main Street, Anytown, ST 12345</text>
<text x="842" y="1138.85" font-size="13">Jane Smith</text>
<text x="842" y="1182.85" font-size="12">Sheet: A1</text>
<text x="1015" y="1182.85" font-size="12">Date: 2026-02-11</text>
<text x="842" y="1200.85" font-size="12">Scale: 1/4in = 1ft</text>
<text x="1015" y="1200.85" fill="#666" font-size="10">FloorScript v0.1</text>
</g>
</g>
</svg>"
`;

exports[`visual regression > multi-room renders consistently 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 1330" width="1200" height="1330">
<rect x="0" y="0" width="1200" height="1330" fill="white"/>
<g class="layer-structural">
<g class="walls">
<g fill="#333" stroke="none">
<rect x="686.09" y="760.43" width="11.74" height="125.22"/>
<rect x="686.09" y="447.39" width="11.74" height="125.22"/>
</g>
<g fill="#333" stroke="none">
<rect x="498.26" y="435.65" width="31.3" height="11.74"/>
<rect x="654.78" y="435.65" width="31.3" height="11.74"/>
</g>
<rect x="122.61" y="435.65" width="363.91" height="11.74" stroke="none" fill="#333"/>
<g fill="#333" stroke="none">
<rect x="122.61" y="885.65" width="31.3" height="16.96"/>
<rect x="232.17" y="885.65" width="78.26" height="16.96"/>
<rect x="404.35" y="885.65" width="62.61" height="16.96"/>
</g>
<rect x="697.83" y="435.65" width="313.04" height="11.74" stroke="none" fill="#333"/>
<rect x="486.52" y="341.74" width="11.74" height="15.65" stroke="none" fill="#333"/>
<g fill="#333" stroke="none">
<rect x="498.26" y="330" width="31.3" height="11.74"/>
<rect x="607.83" y="330" width="78.26" height="11.74"/>
</g>
<rect x="686.09" y="341.74" width="11.74" height="15.65" stroke="none" fill="#333"/>
<rect x="486.52" y="122.61" width="11.74" height="234.78" stroke="none" fill="#333"/>
<rect x="686.09" y="122.61" width="11.74" height="234.78" stroke="none" fill="#333"/>
<rect x="486.52" y="435.65" width="11.74" height="11.74" stroke="none" fill="#333"/>
<g fill="#000" stroke="none">
<rect x="279.13" y="885.65" width="31.3" height="16.96"/>
<rect x="404.35" y="885.65" width="62.61" height="16.96"/>
<rect x="592.17" y="885.65" width="93.91" height="16.96"/>
</g>
<rect x="110.87" y="435.65" width="11.74" height="11.74" stroke="none" fill="#333"/>
<rect x="486.52" y="330" width="11.74" height="11.74" stroke="none" fill="#333"/>
<rect x="686.09" y="110.87" width="11.74" height="11.74" stroke="none" fill="#333"/>
<rect x="486.52" y="110.87" width="11.74" height="11.74" stroke="none" fill="#333"/>
<rect x="686.09" y="330" width="11.74" height="11.74" stroke="none" fill="#333"/>
<g fill="#000" stroke="none">
<rect x="105.65" y="760.43" width="16.96" height="133.7"/>
<rect x="105.65" y="435.65" width="16.96" height="168.26"/>
</g>
<g fill="#000" stroke="none">
<rect x="686.09" y="885.65" width="105.65" height="16.96"/>
<rect x="916.96" y="885.65" width="110.87" height="16.96"/>
</g>
<g fill="#000" stroke="none">
<rect x="1010.87" y="760.43" width="16.96" height="142.17"/>
<rect x="1010.87" y="435.65" width="16.96" height="168.26"/>
</g>
<g fill="#000" stroke="none">
<rect x="93.91" y="105.65" width="204.78" height="16.96"/>
<rect x="423.91" y="105.65" width="74.35" height="16.96"/>
</g>
<g fill="#000" stroke="none">
<rect x="93.91" y="420" width="16.96" height="27.39"/>
<rect x="93.91" y="122.61" width="16.96" height="203.48"/>
</g>
<rect x="486.52" y="93.91" width="211.3" height="16.96" stroke="none" fill="#000"/>
<g fill="#000" stroke="none">
<rect x="686.09" y="105.65" width="43.04" height="16.96"/>
<rect x="854.35" y="105.65" width="173.48" height="16.96"/>
</g>
<g fill="#000" stroke="none">
<rect x="1010.87" y="404.35" width="16.96" height="43.04"/>
<rect x="1010.87" y="122.61" width="16.96" height="187.83"/>
</g>
<rect x="105.65" y="1059.13" width="185.22" height="16.96" stroke="none" fill="#000"/>
<rect x="279.13" y="894.13" width="11.74" height="165" stroke="none" fill="#333"/>
<rect x="105.65" y="885.65" width="16.96" height="173.48" stroke="none" fill="#000"/>
<g fill="#333" stroke="none">
<rect x="224.35" y="232.17" width="11.74" height="78.26"/>
<rect x="224.35" y="122.61" width="11.74" height="31.3"/>
</g>
<rect x="110.87" y="298.7" width="125.22" height="11.74" stroke="none" fill="#333"/>
<g fill="#333" stroke="none">
<rect x="901.3" y="232.17" width="11.74" height="46.96"/>
<rect x="901.3" y="122.61" width="11.74" height="15.65"/>
</g>
<rect x="901.3" y="267.39" width="109.57" height="11.74" stroke="none" fill="#333"/>
<rect x="1010.87" y="586.96" width="78.26" height="16.96" stroke="none" fill="#000"/>
<rect x="1010.87" y="760.43" width="78.26" height="16.96" stroke="none" fill="#000"/>
<g fill="#000" stroke="none">
<rect x="1089.13" y="744.78" width="16.96" height="32.61"/>
<rect x="1089.13" y="586.96" width="16.96" height="32.61"/>
</g>
</g>
<g class="opening cased-opening" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="686.09" y1="760.43" x2="697.83" y2="760.43"/>
<line x1="686.09" y1="760.43" x2="686.09" y2="778.04"/>
<line x1="697.83" y1="760.43" x2="697.83" y2="778.04"/>
<line x1="686.09" y1="572.61" x2="697.83" y2="572.61"/>
<line x1="686.09" y1="572.61" x2="686.09" y2="555"/>
<line x1="697.83" y1="572.61" x2="697.83" y2="555"/>
</g>
<g class="opening cased-opening" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="529.57" y1="435.65" x2="529.57" y2="447.39"/>
<line x1="529.57" y1="435.65" x2="511.96" y2="435.65"/>
<line x1="529.57" y1="447.39" x2="511.96" y2="447.39"/>
<line x1="654.78" y1="435.65" x2="654.78" y2="447.39"/>
<line x1="654.78" y1="435.65" x2="672.39" y2="435.65"/>
<line x1="654.78" y1="447.39" x2="672.39" y2="447.39"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="404.35" y1="902.61" x2="404.35" y2="808.7"/>
<path d="M 404.35,808.7 A 93.91,93.91 0 0,0 310.43,902.61"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="466.96" y1="889.89" x2="592.17" y2="889.89"/>
<line x1="466.96" y1="898.37" x2="592.17" y2="898.37"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="153.91" y1="902.61" x2="153.91" y2="980.87"/>
<path d="M 153.91,980.87 A 78.26,78.26 0 0,0 232.17,902.61"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="486.52" y1="435.65" x2="408.26" y2="435.65"/>
<path d="M 408.26,435.65 A 78.26,78.26 0 0,1 486.52,357.39"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="529.57" y1="341.74" x2="529.57" y2="263.48"/>
<path d="M 529.57,263.48 A 78.26,78.26 0 0,1 607.83,341.74"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="686.09" y1="435.65" x2="764.35" y2="435.65"/>
<path d="M 764.35,435.65 A 78.26,78.26 0 0,0 686.09,357.39"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="486.52" y1="435.65" x2="408.26" y2="435.65"/>
<path d="M 408.26,435.65 A 78.26,78.26 0 0,1 486.52,357.39"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="686.09" y1="435.65" x2="764.35" y2="435.65"/>
<path d="M 764.35,435.65 A 78.26,78.26 0 0,0 686.09,357.39"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="404.35" y1="902.61" x2="404.35" y2="808.7"/>
<path d="M 404.35,808.7 A 93.91,93.91 0 0,0 310.43,902.61"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="466.96" y1="889.89" x2="592.17" y2="889.89"/>
<line x1="466.96" y1="898.37" x2="592.17" y2="898.37"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="109.89" y1="760.43" x2="109.89" y2="603.91"/>
<line x1="118.37" y1="760.43" x2="118.37" y2="603.91"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="791.74" y1="889.89" x2="916.96" y2="889.89"/>
<line x1="791.74" y1="898.37" x2="916.96" y2="898.37"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="298.7" y1="109.89" x2="423.91" y2="109.89"/>
<line x1="298.7" y1="118.37" x2="423.91" y2="118.37"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="98.15" y1="420" x2="98.15" y2="326.09"/>
<line x1="106.63" y1="420" x2="106.63" y2="326.09"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="729.13" y1="109.89" x2="854.35" y2="109.89"/>
<line x1="729.13" y1="118.37" x2="854.35" y2="118.37"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="1015.11" y1="404.35" x2="1015.11" y2="310.43"/>
<line x1="1023.59" y1="404.35" x2="1023.59" y2="310.43"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="224.35" y1="232.17" x2="146.09" y2="232.17"/>
<path d="M 146.09,232.17 A 78.26,78.26 0 0,1 224.35,153.91"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="901.3" y1="138.26" x2="995.22" y2="138.26"/>
<path d="M 995.22,138.26 A 93.91,93.91 0 0,1 901.3,232.17"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="1093.37" y1="744.78" x2="1093.37" y2="619.57"/>
<line x1="1101.85" y1="744.78" x2="1101.85" y2="619.57"/>
</g>
</g>
<g class="layer-labels">
<text x="404.35" y="666.52" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="15.65" font-weight="500" text-anchor="middle" dominant-baseline="central">Living Room</text>
<text x="854.35" y="666.52" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="15.65" font-weight="500" text-anchor="middle" dominant-baseline="central">Kitchen</text>
<text x="1050" y="682.17" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="15.65" font-weight="500" text-anchor="middle" dominant-baseline="central">Bay Window</text>
<text x="592.17" y="388.7" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="15.65" font-weight="500" text-anchor="middle" dominant-baseline="central">Hall</text>
<text x="298.7" y="279.13" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="15.65" font-weight="500" text-anchor="middle" dominant-baseline="central">Bedroom 1</text>
<text x="173.48" y="216.52" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="15.65" font-weight="500" text-anchor="middle" dominant-baseline="central">Walk-in Closet</text>
<text x="592.17" y="220.43" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="15.65" font-weight="500" text-anchor="middle" dominant-baseline="central">Full Bath</text>
<text x="854.35" y="279.13" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="15.65" font-weight="500" text-anchor="middle" dominant-baseline="central">Bedroom 2</text>
<text x="956.09" y="200.87" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="15.65" font-weight="500" text-anchor="middle" dominant-baseline="central">Closet</text>
<text x="200.87" y="980.87" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="15.65" font-weight="500" text-anchor="middle" dominant-baseline="central">Half Bath</text>
</g>
<g class="layer-dimensions">
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="122.61" y1="384.78" x2="686.09" y2="384.78"/>
<line x1="117.91" y1="389.48" x2="127.3" y2="380.09"/>
<line x1="681.39" y1="389.48" x2="690.78" y2="380.09"/>
<text x="404.35" y="376.96" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle">18&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="60" y1="885.65" x2="60" y2="447.39"/>
<line x1="55.3" y1="890.35" x2="64.7" y2="880.96"/>
<line x1="55.3" y1="452.09" x2="64.7" y2="442.7"/>
<text x="52.17" y="666.52" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle" transform="rotate(-90, 52.17, 666.52)">14&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="697.83" y1="948.26" x2="1010.87" y2="948.26"/>
<line x1="693.13" y1="952.96" x2="702.52" y2="943.57"/>
<line x1="1006.17" y1="952.96" x2="1015.57" y2="943.57"/>
<text x="854.35" y="940.43" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle">10&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="1073.48" y1="885.65" x2="1073.48" y2="447.39"/>
<line x1="1068.78" y1="890.35" x2="1078.17" y2="880.96"/>
<line x1="1068.78" y1="452.09" x2="1078.17" y2="442.7"/>
<text x="1065.65" y="666.52" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle" transform="rotate(-90, 1065.65, 666.52)">14&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="498.26" y1="279.13" x2="686.09" y2="279.13"/>
<line x1="493.57" y1="283.83" x2="502.96" y2="274.43"/>
<line x1="681.39" y1="283.83" x2="690.78" y2="274.43"/>
<text x="592.17" y="271.3" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle">6&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="748.7" y1="435.65" x2="748.7" y2="341.74"/>
<line x1="744" y1="440.35" x2="753.39" y2="430.96"/>
<line x1="744" y1="346.43" x2="753.39" y2="337.04"/>
<text x="740.87" y="388.7" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle" transform="rotate(-90, 740.87, 388.7)">3&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="110.87" y1="60" x2="486.52" y2="60"/>
<line x1="106.17" y1="64.7" x2="115.57" y2="55.3"/>
<line x1="481.83" y1="64.7" x2="491.22" y2="55.3"/>
<text x="298.7" y="52.17" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle">12&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="48.26" y1="435.65" x2="48.26" y2="122.61"/>
<line x1="43.57" y1="440.35" x2="52.96" y2="430.96"/>
<line x1="43.57" y1="127.3" x2="52.96" y2="117.91"/>
<text x="40.43" y="279.13" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle" transform="rotate(-90, 40.43, 279.13)">10&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="498.26" y1="48.26" x2="686.09" y2="48.26"/>
<line x1="493.57" y1="52.96" x2="502.96" y2="43.57"/>
<line x1="681.39" y1="52.96" x2="690.78" y2="43.57"/>
<text x="592.17" y="40.43" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle">6&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="748.7" y1="330" x2="748.7" y2="110.87"/>
<line x1="744" y1="334.7" x2="753.39" y2="325.3"/>
<line x1="744" y1="115.57" x2="753.39" y2="106.17"/>
<text x="740.87" y="220.43" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle" transform="rotate(-90, 740.87, 220.43)">7&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="697.83" y1="60" x2="1010.87" y2="60"/>
<line x1="693.13" y1="64.7" x2="702.52" y2="55.3"/>
<line x1="1006.17" y1="64.7" x2="1015.57" y2="55.3"/>
<text x="854.35" y="52.17" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle">10&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="1073.48" y1="435.65" x2="1073.48" y2="122.61"/>
<line x1="1068.78" y1="440.35" x2="1078.17" y2="430.96"/>
<line x1="1068.78" y1="127.3" x2="1078.17" y2="117.91"/>
<text x="1065.65" y="279.13" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle" transform="rotate(-90, 1065.65, 279.13)">10&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="122.61" y1="1121.74" x2="279.13" y2="1121.74"/>
<line x1="117.91" y1="1126.43" x2="127.3" y2="1117.04"/>
<line x1="274.43" y1="1126.43" x2="283.83" y2="1117.04"/>
<text x="200.87" y="1113.91" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle">5&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="60" y1="1059.13" x2="60" y2="902.61"/>
<line x1="55.3" y1="1063.83" x2="64.7" y2="1054.43"/>
<line x1="55.3" y1="907.3" x2="64.7" y2="897.91"/>
<text x="52.17" y="980.87" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle" transform="rotate(-90, 52.17, 980.87)">5&apos;-0&quot;</text>
</g>
</g>
<g class="layer-electrical">
<g class="electrical">
<g class="electrical-panel">
<rect x="701.74" y="830.87" width="31.3" height="46.96" stroke="#000" stroke-width="0.4mm" fill="#fff"/>
<text x="717.39" y="847.3" fill="#000" font-family="sans-serif" font-size="6.89" font-weight="bold" text-anchor="middle" dominant-baseline="central">PANEL</text>
<text x="717.39" y="863.74" fill="#000" font-family="sans-serif" font-size="5.63" text-anchor="middle" dominant-baseline="central">200A</text>
<text x="717.39" y="882.52" fill="#666" font-family="sans-serif" font-size="5.01" text-anchor="middle" dominant-baseline="hanging">Main Panel</text>
</g>
<polyline points="717.39,854.35 404.35,854.35 404.35,666.52" stroke="#333" stroke-width="0.25mm" fill="none"/>
<polyline points="717.39,854.35 842.61,854.35 842.61,666.52" stroke="#333" stroke-width="0.25mm" fill="none"/>
<g class="outlet outlet-duplex">
<circle cx="435.65" cy="894.13" r="10.96" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<line x1="427.98" y1="890.3" x2="443.32" y2="890.3" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="427.98" y1="897.97" x2="443.32" y2="897.97" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="outlet outlet-duplex">
<circle cx="114.13" cy="612.39" r="10.96" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<line x1="106.46" y1="608.56" x2="121.8" y2="608.56" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="106.46" y1="616.23" x2="121.8" y2="616.23" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="outlet outlet-gfci">
<circle cx="791.74" cy="894.13" r="10.96" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="791.74" y="909.78" fill="#000" font-size="7.67" text-anchor="middle" dominant-baseline="hanging">GFI</text>
</g>
<g class="outlet outlet-gfci">
<circle cx="854.35" cy="441.52" r="10.96" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="854.35" y="457.17" fill="#000" font-size="7.67" text-anchor="middle" dominant-baseline="hanging">GFI</text>
</g>
<g class="outlet outlet-duplex">
<circle cx="298.7" cy="114.13" r="10.96" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<line x1="291.03" y1="110.3" x2="306.37" y2="110.3" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="291.03" y1="117.97" x2="306.37" y2="117.97" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="outlet outlet-duplex">
<circle cx="102.39" cy="384.78" r="10.96" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<line x1="94.72" y1="380.95" x2="110.06" y2="380.95" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="94.72" y1="388.62" x2="110.06" y2="388.62" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="outlet outlet-duplex">
<circle cx="854.35" cy="114.13" r="10.96" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<line x1="846.68" y1="110.3" x2="862.02" y2="110.3" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="846.68" y1="117.97" x2="862.02" y2="117.97" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="outlet outlet-duplex">
<circle cx="1019.35" cy="353.48" r="10.96" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<line x1="1011.68" y1="349.64" x2="1027.02" y2="349.64" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="1011.68" y1="357.31" x2="1027.02" y2="357.31" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="outlet outlet-gfci">
<circle cx="691.96" cy="236.09" r="10.96" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="691.96" y="251.74" fill="#000" font-size="7.67" text-anchor="middle" dominant-baseline="hanging">GFI</text>
</g>
<g class="outlet outlet-gfci">
<circle cx="285" cy="996.52" r="10.96" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="285" y="1012.17" fill="#000" font-size="7.67" text-anchor="middle" dominant-baseline="hanging">GFI</text>
</g>
<g class="switch switch-single">
<circle cx="247.83" cy="894.13" r="10.96" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="247.83" y="894.13" fill="#000" font-family="sans-serif" font-size="12.05" font-weight="bold" text-anchor="middle" dominant-baseline="central">S</text>
</g>
<g class="switch switch-single">
<circle cx="691.96" cy="823.04" r="10.96" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="691.96" y="823.04" fill="#000" font-family="sans-serif" font-size="12.05" font-weight="bold" text-anchor="middle" dominant-baseline="central">S</text>
</g>
<g class="switch switch-single">
<circle cx="466.96" cy="441.52" r="10.96" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="466.96" y="441.52" fill="#000" font-family="sans-serif" font-size="12.05" font-weight="bold" text-anchor="middle" dominant-baseline="central">S</text>
</g>
<g class="switch switch-single">
<circle cx="729.13" cy="441.52" r="10.96" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="729.13" y="441.52" fill="#000" font-family="sans-serif" font-size="12.05" font-weight="bold" text-anchor="middle" dominant-baseline="central">S</text>
</g>
<g class="switch switch-single">
<circle cx="639.13" cy="335.87" r="10.96" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="639.13" y="335.87" fill="#000" font-family="sans-serif" font-size="12.05" font-weight="bold" text-anchor="middle" dominant-baseline="central">S</text>
</g>
<g class="light-fixture light-recessed">
<rect x="391.2" y="653.37" width="26.3" height="26.3" stroke="#000" stroke-width="0.3mm" fill="none"/>
<circle cx="404.35" cy="666.52" r="7.67" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="light-fixture light-surface">
<circle cx="842.61" cy="666.52" r="10.96" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="830.99" y1="654.9" x2="834.86" y2="658.77" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="854.23" y1="654.9" x2="850.36" y2="658.77" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="830.99" y1="678.14" x2="834.86" y2="674.27" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="854.23" y1="678.14" x2="850.36" y2="674.27" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="light-fixture light-surface">
<circle cx="310.43" cy="290.87" r="10.96" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="298.81" y1="279.25" x2="302.69" y2="283.12" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="322.06" y1="279.25" x2="318.18" y2="283.12" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="298.81" y1="302.49" x2="302.69" y2="298.62" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="322.06" y1="302.49" x2="318.18" y2="298.62" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="light-fixture light-surface">
<circle cx="842.61" cy="290.87" r="10.96" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="830.99" y1="279.25" x2="834.86" y2="283.12" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="854.23" y1="279.25" x2="850.36" y2="283.12" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="830.99" y1="302.49" x2="834.86" y2="298.62" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="854.23" y1="302.49" x2="850.36" y2="298.62" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="light-fixture light-surface">
<circle cx="592.17" cy="259.57" r="10.96" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="580.55" y1="247.94" x2="584.43" y2="251.82" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="603.8" y1="247.94" x2="599.92" y2="251.82" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="580.55" y1="271.19" x2="584.43" y2="267.31" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="603.8" y1="271.19" x2="599.92" y2="267.31" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="smoke-detector">
<circle cx="404.35" cy="572.61" r="10.96" stroke="#000" stroke-width="0.3mm" fill="none"/>
<text x="404.35" y="572.61" fill="#000" font-family="sans-serif" font-size="9.86" text-anchor="middle" dominant-baseline="central">S/CO</text>
</g>
<g class="smoke-detector">
<circle cx="310.43" cy="290.87" r="10.96" stroke="#000" stroke-width="0.3mm" fill="none"/>
<text x="310.43" y="290.87" fill="#000" font-family="sans-serif" font-size="9.86" text-anchor="middle" dominant-baseline="central">S/CO</text>
</g>
</g>
</g>
<g class="layer-plumbing">
<g class="plumbing">
<polyline points="791.74,476.09 776.09,447.39" stroke="#0000CC" stroke-width="0.4mm" fill="none"/>
<text x="780.78" y="447.39" fill="#0000CC" font-family="sans-serif" font-size="4.7" text-anchor="start" dominant-baseline="central">1/2in</text>
<polyline points="791.74,476.09 807.39,447.39" stroke="#CC0000" stroke-width="0.4mm" fill="none"/>
<text x="812.09" y="447.39" fill="#CC0000" font-family="sans-serif" font-size="4.7" text-anchor="start" dominant-baseline="central">1/2in</text>
<polyline points="676.96,204.78 697.83,220.43" stroke="#0000CC" stroke-width="0.4mm" fill="none"/>
<text x="702.52" y="220.43" fill="#0000CC" font-family="sans-serif" font-size="4.7" text-anchor="start" dominant-baseline="central">1/2in</text>
<polyline points="676.96,204.78 697.83,189.13" stroke="#CC0000" stroke-width="0.4mm" fill="none"/>
<text x="702.52" y="189.13" fill="#CC0000" font-family="sans-serif" font-size="4.7" text-anchor="start" dominant-baseline="central">1/2in</text>
<polyline points="661.3,298.7 697.83,298.7" stroke="#006600" stroke-width="0.5mm" fill="none"/>
<polyline points="216.52,1022.61 153.91,1059.13" stroke="#006600" stroke-width="0.5mm" fill="none"/>
<g class="plumbing-fixture fixture-kitchen-sink">
<rect x="748.7" y="447.39" width="86.09" height="57.39" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="791.74" y1="447.39" x2="791.74" y2="504.78" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="plumbing-fixture fixture-bathtub">
<rect x="435.65" y="110.87" width="156.52" height="0" stroke="#000" stroke-width="0.3mm" fill="none"/>
<path d="M 435.65,110.87 A 78.26,78.26 0 0,1 592.17,110.87" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="435.65" y1="110.87" x2="435.65" y2="110.87" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="592.17" y1="110.87" x2="592.17" y2="110.87" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="plumbing-fixture fixture-toilet" transform="rotate(90, 661.3043478260869, 298.6956521739128)">
<rect x="642.52" y="262.17" width="37.57" height="18.26" stroke="#000" stroke-width="0.3mm" fill="none"/>
<ellipse cx="661.3" cy="306" rx="23.48" ry="29.22" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="plumbing-fixture fixture-bath-sink" transform="rotate(90, 676.9565217391304, 204.78260869565202)">
<ellipse cx="676.96" cy="204.78" rx="26.09" ry="20.87" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="plumbing-fixture fixture-bath-sink" transform="rotate(180, 153.91304347826085, 1038.260869565217)">
<ellipse cx="153.91" cy="1038.26" rx="26.09" ry="20.87" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="plumbing-fixture fixture-toilet" transform="rotate(180, 216.52173913043475, 1022.6086956521737)">
<rect x="197.74" y="986.09" width="37.57" height="18.26" stroke="#000" stroke-width="0.3mm" fill="none"/>
<ellipse cx="216.52" cy="1029.91" rx="23.48" ry="29.22" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
</g>
</g>
<g class="layer-title-block">
<g class="title-block" font-family="'Helvetica','Arial',sans-serif" fill="#000">
<rect x="830" y="1170" width="350" height="140" stroke="#000" stroke-width="0.50" fill="white"/>
<line x1="830" y1="1260" x2="1180" y2="1260" stroke="#000" stroke-width="0.35"/>
<text x="842" y="1194" font-size="18" font-weight="bold">Small Two-Bedroom House</text>
<text x="842" y="1216" font-size="13">456 Oak Avenue, Anytown, ST 12345</text>
<text x="842" y="1236" font-size="13">John Doe</text>
<text x="842" y="1280" font-size="12">Sheet: A1</text>
<text x="1015" y="1280" font-size="12">Date: 2026-02-13</text>
<text x="842" y="1298" font-size="12">Scale: 1/4in = 1ft</text>
<text x="1015" y="1298" fill="#666" font-size="10">FloorScript v0.1</text>
</g>
</g>
</svg>"
`;

exports[`visual regression > multi-room with electrical hidden renders consistently 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 1330" width="1200" height="1330">
<rect x="0" y="0" width="1200" height="1330" fill="white"/>
<g class="layer-structural">
<g class="walls">
<g fill="#333" stroke="none">
<rect x="686.09" y="760.43" width="11.74" height="125.22"/>
<rect x="686.09" y="447.39" width="11.74" height="125.22"/>
</g>
<g fill="#333" stroke="none">
<rect x="498.26" y="435.65" width="31.3" height="11.74"/>
<rect x="654.78" y="435.65" width="31.3" height="11.74"/>
</g>
<rect x="122.61" y="435.65" width="363.91" height="11.74" stroke="none" fill="#333"/>
<g fill="#333" stroke="none">
<rect x="122.61" y="885.65" width="31.3" height="16.96"/>
<rect x="232.17" y="885.65" width="78.26" height="16.96"/>
<rect x="404.35" y="885.65" width="62.61" height="16.96"/>
</g>
<rect x="697.83" y="435.65" width="313.04" height="11.74" stroke="none" fill="#333"/>
<rect x="486.52" y="341.74" width="11.74" height="15.65" stroke="none" fill="#333"/>
<g fill="#333" stroke="none">
<rect x="498.26" y="330" width="31.3" height="11.74"/>
<rect x="607.83" y="330" width="78.26" height="11.74"/>
</g>
<rect x="686.09" y="341.74" width="11.74" height="15.65" stroke="none" fill="#333"/>
<rect x="486.52" y="122.61" width="11.74" height="234.78" stroke="none" fill="#333"/>
<rect x="686.09" y="122.61" width="11.74" height="234.78" stroke="none" fill="#333"/>
<rect x="486.52" y="435.65" width="11.74" height="11.74" stroke="none" fill="#333"/>
<g fill="#000" stroke="none">
<rect x="279.13" y="885.65" width="31.3" height="16.96"/>
<rect x="404.35" y="885.65" width="62.61" height="16.96"/>
<rect x="592.17" y="885.65" width="93.91" height="16.96"/>
</g>
<rect x="110.87" y="435.65" width="11.74" height="11.74" stroke="none" fill="#333"/>
<rect x="486.52" y="330" width="11.74" height="11.74" stroke="none" fill="#333"/>
<rect x="686.09" y="110.87" width="11.74" height="11.74" stroke="none" fill="#333"/>
<rect x="486.52" y="110.87" width="11.74" height="11.74" stroke="none" fill="#333"/>
<rect x="686.09" y="330" width="11.74" height="11.74" stroke="none" fill="#333"/>
<g fill="#000" stroke="none">
<rect x="105.65" y="760.43" width="16.96" height="133.7"/>
<rect x="105.65" y="435.65" width="16.96" height="168.26"/>
</g>
<g fill="#000" stroke="none">
<rect x="686.09" y="885.65" width="105.65" height="16.96"/>
<rect x="916.96" y="885.65" width="110.87" height="16.96"/>
</g>
<g fill="#000" stroke="none">
<rect x="1010.87" y="760.43" width="16.96" height="142.17"/>
<rect x="1010.87" y="435.65" width="16.96" height="168.26"/>
</g>
<g fill="#000" stroke="none">
<rect x="93.91" y="105.65" width="204.78" height="16.96"/>
<rect x="423.91" y="105.65" width="74.35" height="16.96"/>
</g>
<g fill="#000" stroke="none">
<rect x="93.91" y="420" width="16.96" height="27.39"/>
<rect x="93.91" y="122.61" width="16.96" height="203.48"/>
</g>
<rect x="486.52" y="93.91" width="211.3" height="16.96" stroke="none" fill="#000"/>
<g fill="#000" stroke="none">
<rect x="686.09" y="105.65" width="43.04" height="16.96"/>
<rect x="854.35" y="105.65" width="173.48" height="16.96"/>
</g>
<g fill="#000" stroke="none">
<rect x="1010.87" y="404.35" width="16.96" height="43.04"/>
<rect x="1010.87" y="122.61" width="16.96" height="187.83"/>
</g>
<rect x="105.65" y="1059.13" width="185.22" height="16.96" stroke="none" fill="#000"/>
<rect x="279.13" y="894.13" width="11.74" height="165" stroke="none" fill="#333"/>
<rect x="105.65" y="885.65" width="16.96" height="173.48" stroke="none" fill="#000"/>
<g fill="#333" stroke="none">
<rect x="224.35" y="232.17" width="11.74" height="78.26"/>
<rect x="224.35" y="122.61" width="11.74" height="31.3"/>
</g>
<rect x="110.87" y="298.7" width="125.22" height="11.74" stroke="none" fill="#333"/>
<g fill="#333" stroke="none">
<rect x="901.3" y="232.17" width="11.74" height="46.96"/>
<rect x="901.3" y="122.61" width="11.74" height="15.65"/>
</g>
<rect x="901.3" y="267.39" width="109.57" height="11.74" stroke="none" fill="#333"/>
<rect x="1010.87" y="586.96" width="78.26" height="16.96" stroke="none" fill="#000"/>
<rect x="1010.87" y="760.43" width="78.26" height="16.96" stroke="none" fill="#000"/>
<g fill="#000" stroke="none">
<rect x="1089.13" y="744.78" width="16.96" height="32.61"/>
<rect x="1089.13" y="586.96" width="16.96" height="32.61"/>
</g>
</g>
<g class="opening cased-opening" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="686.09" y1="760.43" x2="697.83" y2="760.43"/>
<line x1="686.09" y1="760.43" x2="686.09" y2="778.04"/>
<line x1="697.83" y1="760.43" x2="697.83" y2="778.04"/>
<line x1="686.09" y1="572.61" x2="697.83" y2="572.61"/>
<line x1="686.09" y1="572.61" x2="686.09" y2="555"/>
<line x1="697.83" y1="572.61" x2="697.83" y2="555"/>
</g>
<g class="opening cased-opening" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="529.57" y1="435.65" x2="529.57" y2="447.39"/>
<line x1="529.57" y1="435.65" x2="511.96" y2="435.65"/>
<line x1="529.57" y1="447.39" x2="511.96" y2="447.39"/>
<line x1="654.78" y1="435.65" x2="654.78" y2="447.39"/>
<line x1="654.78" y1="435.65" x2="672.39" y2="435.65"/>
<line x1="654.78" y1="447.39" x2="672.39" y2="447.39"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="404.35" y1="902.61" x2="404.35" y2="808.7"/>
<path d="M 404.35,808.7 A 93.91,93.91 0 0,0 310.43,902.61"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="466.96" y1="889.89" x2="592.17" y2="889.89"/>
<line x1="466.96" y1="898.37" x2="592.17" y2="898.37"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="153.91" y1="902.61" x2="153.91" y2="980.87"/>
<path d="M 153.91,980.87 A 78.26,78.26 0 0,0 232.17,902.61"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="486.52" y1="435.65" x2="408.26" y2="435.65"/>
<path d="M 408.26,435.65 A 78.26,78.26 0 0,1 486.52,357.39"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="529.57" y1="341.74" x2="529.57" y2="263.48"/>
<path d="M 529.57,263.48 A 78.26,78.26 0 0,1 607.83,341.74"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="686.09" y1="435.65" x2="764.35" y2="435.65"/>
<path d="M 764.35,435.65 A 78.26,78.26 0 0,0 686.09,357.39"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="486.52" y1="435.65" x2="408.26" y2="435.65"/>
<path d="M 408.26,435.65 A 78.26,78.26 0 0,1 486.52,357.39"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="686.09" y1="435.65" x2="764.35" y2="435.65"/>
<path d="M 764.35,435.65 A 78.26,78.26 0 0,0 686.09,357.39"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="404.35" y1="902.61" x2="404.35" y2="808.7"/>
<path d="M 404.35,808.7 A 93.91,93.91 0 0,0 310.43,902.61"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="466.96" y1="889.89" x2="592.17" y2="889.89"/>
<line x1="466.96" y1="898.37" x2="592.17" y2="898.37"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="109.89" y1="760.43" x2="109.89" y2="603.91"/>
<line x1="118.37" y1="760.43" x2="118.37" y2="603.91"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="791.74" y1="889.89" x2="916.96" y2="889.89"/>
<line x1="791.74" y1="898.37" x2="916.96" y2="898.37"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="298.7" y1="109.89" x2="423.91" y2="109.89"/>
<line x1="298.7" y1="118.37" x2="423.91" y2="118.37"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="98.15" y1="420" x2="98.15" y2="326.09"/>
<line x1="106.63" y1="420" x2="106.63" y2="326.09"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="729.13" y1="109.89" x2="854.35" y2="109.89"/>
<line x1="729.13" y1="118.37" x2="854.35" y2="118.37"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="1015.11" y1="404.35" x2="1015.11" y2="310.43"/>
<line x1="1023.59" y1="404.35" x2="1023.59" y2="310.43"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="224.35" y1="232.17" x2="146.09" y2="232.17"/>
<path d="M 146.09,232.17 A 78.26,78.26 0 0,1 224.35,153.91"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="901.3" y1="138.26" x2="995.22" y2="138.26"/>
<path d="M 995.22,138.26 A 93.91,93.91 0 0,1 901.3,232.17"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="1093.37" y1="744.78" x2="1093.37" y2="619.57"/>
<line x1="1101.85" y1="744.78" x2="1101.85" y2="619.57"/>
</g>
</g>
<g class="layer-labels">
<text x="404.35" y="666.52" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="15.65" font-weight="500" text-anchor="middle" dominant-baseline="central">Living Room</text>
<text x="854.35" y="666.52" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="15.65" font-weight="500" text-anchor="middle" dominant-baseline="central">Kitchen</text>
<text x="1050" y="682.17" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="15.65" font-weight="500" text-anchor="middle" dominant-baseline="central">Bay Window</text>
<text x="592.17" y="388.7" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="15.65" font-weight="500" text-anchor="middle" dominant-baseline="central">Hall</text>
<text x="298.7" y="279.13" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="15.65" font-weight="500" text-anchor="middle" dominant-baseline="central">Bedroom 1</text>
<text x="173.48" y="216.52" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="15.65" font-weight="500" text-anchor="middle" dominant-baseline="central">Walk-in Closet</text>
<text x="592.17" y="220.43" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="15.65" font-weight="500" text-anchor="middle" dominant-baseline="central">Full Bath</text>
<text x="854.35" y="279.13" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="15.65" font-weight="500" text-anchor="middle" dominant-baseline="central">Bedroom 2</text>
<text x="956.09" y="200.87" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="15.65" font-weight="500" text-anchor="middle" dominant-baseline="central">Closet</text>
<text x="200.87" y="980.87" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="15.65" font-weight="500" text-anchor="middle" dominant-baseline="central">Half Bath</text>
</g>
<g class="layer-dimensions">
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="122.61" y1="384.78" x2="686.09" y2="384.78"/>
<line x1="117.91" y1="389.48" x2="127.3" y2="380.09"/>
<line x1="681.39" y1="389.48" x2="690.78" y2="380.09"/>
<text x="404.35" y="376.96" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle">18&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="60" y1="885.65" x2="60" y2="447.39"/>
<line x1="55.3" y1="890.35" x2="64.7" y2="880.96"/>
<line x1="55.3" y1="452.09" x2="64.7" y2="442.7"/>
<text x="52.17" y="666.52" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle" transform="rotate(-90, 52.17, 666.52)">14&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="697.83" y1="948.26" x2="1010.87" y2="948.26"/>
<line x1="693.13" y1="952.96" x2="702.52" y2="943.57"/>
<line x1="1006.17" y1="952.96" x2="1015.57" y2="943.57"/>
<text x="854.35" y="940.43" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle">10&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="1073.48" y1="885.65" x2="1073.48" y2="447.39"/>
<line x1="1068.78" y1="890.35" x2="1078.17" y2="880.96"/>
<line x1="1068.78" y1="452.09" x2="1078.17" y2="442.7"/>
<text x="1065.65" y="666.52" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle" transform="rotate(-90, 1065.65, 666.52)">14&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="498.26" y1="279.13" x2="686.09" y2="279.13"/>
<line x1="493.57" y1="283.83" x2="502.96" y2="274.43"/>
<line x1="681.39" y1="283.83" x2="690.78" y2="274.43"/>
<text x="592.17" y="271.3" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle">6&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="748.7" y1="435.65" x2="748.7" y2="341.74"/>
<line x1="744" y1="440.35" x2="753.39" y2="430.96"/>
<line x1="744" y1="346.43" x2="753.39" y2="337.04"/>
<text x="740.87" y="388.7" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle" transform="rotate(-90, 740.87, 388.7)">3&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="110.87" y1="60" x2="486.52" y2="60"/>
<line x1="106.17" y1="64.7" x2="115.57" y2="55.3"/>
<line x1="481.83" y1="64.7" x2="491.22" y2="55.3"/>
<text x="298.7" y="52.17" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle">12&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="48.26" y1="435.65" x2="48.26" y2="122.61"/>
<line x1="43.57" y1="440.35" x2="52.96" y2="430.96"/>
<line x1="43.57" y1="127.3" x2="52.96" y2="117.91"/>
<text x="40.43" y="279.13" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle" transform="rotate(-90, 40.43, 279.13)">10&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="498.26" y1="48.26" x2="686.09" y2="48.26"/>
<line x1="493.57" y1="52.96" x2="502.96" y2="43.57"/>
<line x1="681.39" y1="52.96" x2="690.78" y2="43.57"/>
<text x="592.17" y="40.43" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle">6&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="748.7" y1="330" x2="748.7" y2="110.87"/>
<line x1="744" y1="334.7" x2="753.39" y2="325.3"/>
<line x1="744" y1="115.57" x2="753.39" y2="106.17"/>
<text x="740.87" y="220.43" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle" transform="rotate(-90, 740.87, 220.43)">7&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="697.83" y1="60" x2="1010.87" y2="60"/>
<line x1="693.13" y1="64.7" x2="702.52" y2="55.3"/>
<line x1="1006.17" y1="64.7" x2="1015.57" y2="55.3"/>
<text x="854.35" y="52.17" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle">10&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="1073.48" y1="435.65" x2="1073.48" y2="122.61"/>
<line x1="1068.78" y1="440.35" x2="1078.17" y2="430.96"/>
<line x1="1068.78" y1="127.3" x2="1078.17" y2="117.91"/>
<text x="1065.65" y="279.13" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle" transform="rotate(-90, 1065.65, 279.13)">10&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="122.61" y1="1121.74" x2="279.13" y2="1121.74"/>
<line x1="117.91" y1="1126.43" x2="127.3" y2="1117.04"/>
<line x1="274.43" y1="1126.43" x2="283.83" y2="1117.04"/>
<text x="200.87" y="1113.91" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle">5&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="60" y1="1059.13" x2="60" y2="902.61"/>
<line x1="55.3" y1="1063.83" x2="64.7" y2="1054.43"/>
<line x1="55.3" y1="907.3" x2="64.7" y2="897.91"/>
<text x="52.17" y="980.87" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle" transform="rotate(-90, 52.17, 980.87)">5&apos;-0&quot;</text>
</g>
</g>
<g class="layer-plumbing">
<g class="plumbing">
<polyline points="791.74,476.09 776.09,447.39" stroke="#0000CC" stroke-width="0.4mm" fill="none"/>
<text x="780.78" y="447.39" fill="#0000CC" font-family="sans-serif" font-size="4.7" text-anchor="start" dominant-baseline="central">1/2in</text>
<polyline points="791.74,476.09 807.39,447.39" stroke="#CC0000" stroke-width="0.4mm" fill="none"/>
<text x="812.09" y="447.39" fill="#CC0000" font-family="sans-serif" font-size="4.7" text-anchor="start" dominant-baseline="central">1/2in</text>
<polyline points="676.96,204.78 697.83,220.43" stroke="#0000CC" stroke-width="0.4mm" fill="none"/>
<text x="702.52" y="220.43" fill="#0000CC" font-family="sans-serif" font-size="4.7" text-anchor="start" dominant-baseline="central">1/2in</text>
<polyline points="676.96,204.78 697.83,189.13" stroke="#CC0000" stroke-width="0.4mm" fill="none"/>
<text x="702.52" y="189.13" fill="#CC0000" font-family="sans-serif" font-size="4.7" text-anchor="start" dominant-baseline="central">1/2in</text>
<polyline points="661.3,298.7 697.83,298.7" stroke="#006600" stroke-width="0.5mm" fill="none"/>
<polyline points="216.52,1022.61 153.91,1059.13" stroke="#006600" stroke-width="0.5mm" fill="none"/>
<g class="plumbing-fixture fixture-kitchen-sink">
<rect x="748.7" y="447.39" width="86.09" height="57.39" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="791.74" y1="447.39" x2="791.74" y2="504.78" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="plumbing-fixture fixture-bathtub">
<rect x="435.65" y="110.87" width="156.52" height="0" stroke="#000" stroke-width="0.3mm" fill="none"/>
<path d="M 435.65,110.87 A 78.26,78.26 0 0,1 592.17,110.87" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="435.65" y1="110.87" x2="435.65" y2="110.87" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="592.17" y1="110.87" x2="592.17" y2="110.87" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="plumbing-fixture fixture-toilet" transform="rotate(90, 661.3043478260869, 298.6956521739128)">
<rect x="642.52" y="262.17" width="37.57" height="18.26" stroke="#000" stroke-width="0.3mm" fill="none"/>
<ellipse cx="661.3" cy="306" rx="23.48" ry="29.22" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="plumbing-fixture fixture-bath-sink" transform="rotate(90, 676.9565217391304, 204.78260869565202)">
<ellipse cx="676.96" cy="204.78" rx="26.09" ry="20.87" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="plumbing-fixture fixture-bath-sink" transform="rotate(180, 153.91304347826085, 1038.260869565217)">
<ellipse cx="153.91" cy="1038.26" rx="26.09" ry="20.87" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="plumbing-fixture fixture-toilet" transform="rotate(180, 216.52173913043475, 1022.6086956521737)">
<rect x="197.74" y="986.09" width="37.57" height="18.26" stroke="#000" stroke-width="0.3mm" fill="none"/>
<ellipse cx="216.52" cy="1029.91" rx="23.48" ry="29.22" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
</g>
</g>
<g class="layer-title-block">
<g class="title-block" font-family="'Helvetica','Arial',sans-serif" fill="#000">
<rect x="830" y="1170" width="350" height="140" stroke="#000" stroke-width="0.50" fill="white"/>
<line x1="830" y1="1260" x2="1180" y2="1260" stroke="#000" stroke-width="0.35"/>
<text x="842" y="1194" font-size="18" font-weight="bold">Small Two-Bedroom House</text>
<text x="842" y="1216" font-size="13">456 Oak Avenue, Anytown, ST 12345</text>
<text x="842" y="1236" font-size="13">John Doe</text>
<text x="842" y="1280" font-size="12">Sheet: A1</text>
<text x="1015" y="1280" font-size="12">Date: 2026-02-13</text>
<text x="842" y="1298" font-size="12">Scale: 1/4in = 1ft</text>
<text x="1015" y="1298" fill="#666" font-size="10">FloorScript v0.1</text>
</g>
</g>
</svg>"
`;

exports[`visual regression > multi-room with plumbing hidden renders consistently 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 1330" width="1200" height="1330">
<rect x="0" y="0" width="1200" height="1330" fill="white"/>
<g class="layer-structural">
<g class="walls">
<g fill="#333" stroke="none">
<rect x="686.09" y="760.43" width="11.74" height="125.22"/>
<rect x="686.09" y="447.39" width="11.74" height="125.22"/>
</g>
<g fill="#333" stroke="none">
<rect x="498.26" y="435.65" width="31.3" height="11.74"/>
<rect x="654.78" y="435.65" width="31.3" height="11.74"/>
</g>
<rect x="122.61" y="435.65" width="363.91" height="11.74" stroke="none" fill="#333"/>
<g fill="#333" stroke="none">
<rect x="122.61" y="885.65" width="31.3" height="16.96"/>
<rect x="232.17" y="885.65" width="78.26" height="16.96"/>
<rect x="404.35" y="885.65" width="62.61" height="16.96"/>
</g>
<rect x="697.83" y="435.65" width="313.04" height="11.74" stroke="none" fill="#333"/>
<rect x="486.52" y="341.74" width="11.74" height="15.65" stroke="none" fill="#333"/>
<g fill="#333" stroke="none">
<rect x="498.26" y="330" width="31.3" height="11.74"/>
<rect x="607.83" y="330" width="78.26" height="11.74"/>
</g>
<rect x="686.09" y="341.74" width="11.74" height="15.65" stroke="none" fill="#333"/>
<rect x="486.52" y="122.61" width="11.74" height="234.78" stroke="none" fill="#333"/>
<rect x="686.09" y="122.61" width="11.74" height="234.78" stroke="none" fill="#333"/>
<rect x="486.52" y="435.65" width="11.74" height="11.74" stroke="none" fill="#333"/>
<g fill="#000" stroke="none">
<rect x="279.13" y="885.65" width="31.3" height="16.96"/>
<rect x="404.35" y="885.65" width="62.61" height="16.96"/>
<rect x="592.17" y="885.65" width="93.91" height="16.96"/>
</g>
<rect x="110.87" y="435.65" width="11.74" height="11.74" stroke="none" fill="#333"/>
<rect x="486.52" y="330" width="11.74" height="11.74" stroke="none" fill="#333"/>
<rect x="686.09" y="110.87" width="11.74" height="11.74" stroke="none" fill="#333"/>
<rect x="486.52" y="110.87" width="11.74" height="11.74" stroke="none" fill="#333"/>
<rect x="686.09" y="330" width="11.74" height="11.74" stroke="none" fill="#333"/>
<g fill="#000" stroke="none">
<rect x="105.65" y="760.43" width="16.96" height="133.7"/>
<rect x="105.65" y="435.65" width="16.96" height="168.26"/>
</g>
<g fill="#000" stroke="none">
<rect x="686.09" y="885.65" width="105.65" height="16.96"/>
<rect x="916.96" y="885.65" width="110.87" height="16.96"/>
</g>
<g fill="#000" stroke="none">
<rect x="1010.87" y="760.43" width="16.96" height="142.17"/>
<rect x="1010.87" y="435.65" width="16.96" height="168.26"/>
</g>
<g fill="#000" stroke="none">
<rect x="93.91" y="105.65" width="204.78" height="16.96"/>
<rect x="423.91" y="105.65" width="74.35" height="16.96"/>
</g>
<g fill="#000" stroke="none">
<rect x="93.91" y="420" width="16.96" height="27.39"/>
<rect x="93.91" y="122.61" width="16.96" height="203.48"/>
</g>
<rect x="486.52" y="93.91" width="211.3" height="16.96" stroke="none" fill="#000"/>
<g fill="#000" stroke="none">
<rect x="686.09" y="105.65" width="43.04" height="16.96"/>
<rect x="854.35" y="105.65" width="173.48" height="16.96"/>
</g>
<g fill="#000" stroke="none">
<rect x="1010.87" y="404.35" width="16.96" height="43.04"/>
<rect x="1010.87" y="122.61" width="16.96" height="187.83"/>
</g>
<rect x="105.65" y="1059.13" width="185.22" height="16.96" stroke="none" fill="#000"/>
<rect x="279.13" y="894.13" width="11.74" height="165" stroke="none" fill="#333"/>
<rect x="105.65" y="885.65" width="16.96" height="173.48" stroke="none" fill="#000"/>
<g fill="#333" stroke="none">
<rect x="224.35" y="232.17" width="11.74" height="78.26"/>
<rect x="224.35" y="122.61" width="11.74" height="31.3"/>
</g>
<rect x="110.87" y="298.7" width="125.22" height="11.74" stroke="none" fill="#333"/>
<g fill="#333" stroke="none">
<rect x="901.3" y="232.17" width="11.74" height="46.96"/>
<rect x="901.3" y="122.61" width="11.74" height="15.65"/>
</g>
<rect x="901.3" y="267.39" width="109.57" height="11.74" stroke="none" fill="#333"/>
<rect x="1010.87" y="586.96" width="78.26" height="16.96" stroke="none" fill="#000"/>
<rect x="1010.87" y="760.43" width="78.26" height="16.96" stroke="none" fill="#000"/>
<g fill="#000" stroke="none">
<rect x="1089.13" y="744.78" width="16.96" height="32.61"/>
<rect x="1089.13" y="586.96" width="16.96" height="32.61"/>
</g>
</g>
<g class="opening cased-opening" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="686.09" y1="760.43" x2="697.83" y2="760.43"/>
<line x1="686.09" y1="760.43" x2="686.09" y2="778.04"/>
<line x1="697.83" y1="760.43" x2="697.83" y2="778.04"/>
<line x1="686.09" y1="572.61" x2="697.83" y2="572.61"/>
<line x1="686.09" y1="572.61" x2="686.09" y2="555"/>
<line x1="697.83" y1="572.61" x2="697.83" y2="555"/>
</g>
<g class="opening cased-opening" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="529.57" y1="435.65" x2="529.57" y2="447.39"/>
<line x1="529.57" y1="435.65" x2="511.96" y2="435.65"/>
<line x1="529.57" y1="447.39" x2="511.96" y2="447.39"/>
<line x1="654.78" y1="435.65" x2="654.78" y2="447.39"/>
<line x1="654.78" y1="435.65" x2="672.39" y2="435.65"/>
<line x1="654.78" y1="447.39" x2="672.39" y2="447.39"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="404.35" y1="902.61" x2="404.35" y2="808.7"/>
<path d="M 404.35,808.7 A 93.91,93.91 0 0,0 310.43,902.61"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="466.96" y1="889.89" x2="592.17" y2="889.89"/>
<line x1="466.96" y1="898.37" x2="592.17" y2="898.37"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="153.91" y1="902.61" x2="153.91" y2="980.87"/>
<path d="M 153.91,980.87 A 78.26,78.26 0 0,0 232.17,902.61"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="486.52" y1="435.65" x2="408.26" y2="435.65"/>
<path d="M 408.26,435.65 A 78.26,78.26 0 0,1 486.52,357.39"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="529.57" y1="341.74" x2="529.57" y2="263.48"/>
<path d="M 529.57,263.48 A 78.26,78.26 0 0,1 607.83,341.74"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="686.09" y1="435.65" x2="764.35" y2="435.65"/>
<path d="M 764.35,435.65 A 78.26,78.26 0 0,0 686.09,357.39"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="486.52" y1="435.65" x2="408.26" y2="435.65"/>
<path d="M 408.26,435.65 A 78.26,78.26 0 0,1 486.52,357.39"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="686.09" y1="435.65" x2="764.35" y2="435.65"/>
<path d="M 764.35,435.65 A 78.26,78.26 0 0,0 686.09,357.39"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="404.35" y1="902.61" x2="404.35" y2="808.7"/>
<path d="M 404.35,808.7 A 93.91,93.91 0 0,0 310.43,902.61"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="466.96" y1="889.89" x2="592.17" y2="889.89"/>
<line x1="466.96" y1="898.37" x2="592.17" y2="898.37"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="109.89" y1="760.43" x2="109.89" y2="603.91"/>
<line x1="118.37" y1="760.43" x2="118.37" y2="603.91"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="791.74" y1="889.89" x2="916.96" y2="889.89"/>
<line x1="791.74" y1="898.37" x2="916.96" y2="898.37"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="298.7" y1="109.89" x2="423.91" y2="109.89"/>
<line x1="298.7" y1="118.37" x2="423.91" y2="118.37"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="98.15" y1="420" x2="98.15" y2="326.09"/>
<line x1="106.63" y1="420" x2="106.63" y2="326.09"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="729.13" y1="109.89" x2="854.35" y2="109.89"/>
<line x1="729.13" y1="118.37" x2="854.35" y2="118.37"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="1015.11" y1="404.35" x2="1015.11" y2="310.43"/>
<line x1="1023.59" y1="404.35" x2="1023.59" y2="310.43"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="224.35" y1="232.17" x2="146.09" y2="232.17"/>
<path d="M 146.09,232.17 A 78.26,78.26 0 0,1 224.35,153.91"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="901.3" y1="138.26" x2="995.22" y2="138.26"/>
<path d="M 995.22,138.26 A 93.91,93.91 0 0,1 901.3,232.17"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="1093.37" y1="744.78" x2="1093.37" y2="619.57"/>
<line x1="1101.85" y1="744.78" x2="1101.85" y2="619.57"/>
</g>
</g>
<g class="layer-labels">
<text x="404.35" y="666.52" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="15.65" font-weight="500" text-anchor="middle" dominant-baseline="central">Living Room</text>
<text x="854.35" y="666.52" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="15.65" font-weight="500" text-anchor="middle" dominant-baseline="central">Kitchen</text>
<text x="1050" y="682.17" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="15.65" font-weight="500" text-anchor="middle" dominant-baseline="central">Bay Window</text>
<text x="592.17" y="388.7" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="15.65" font-weight="500" text-anchor="middle" dominant-baseline="central">Hall</text>
<text x="298.7" y="279.13" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="15.65" font-weight="500" text-anchor="middle" dominant-baseline="central">Bedroom 1</text>
<text x="173.48" y="216.52" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="15.65" font-weight="500" text-anchor="middle" dominant-baseline="central">Walk-in Closet</text>
<text x="592.17" y="220.43" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="15.65" font-weight="500" text-anchor="middle" dominant-baseline="central">Full Bath</text>
<text x="854.35" y="279.13" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="15.65" font-weight="500" text-anchor="middle" dominant-baseline="central">Bedroom 2</text>
<text x="956.09" y="200.87" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="15.65" font-weight="500" text-anchor="middle" dominant-baseline="central">Closet</text>
<text x="200.87" y="980.87" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="15.65" font-weight="500" text-anchor="middle" dominant-baseline="central">Half Bath</text>
</g>
<g class="layer-dimensions">
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="122.61" y1="384.78" x2="686.09" y2="384.78"/>
<line x1="117.91" y1="389.48" x2="127.3" y2="380.09"/>
<line x1="681.39" y1="389.48" x2="690.78" y2="380.09"/>
<text x="404.35" y="376.96" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle">18&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="60" y1="885.65" x2="60" y2="447.39"/>
<line x1="55.3" y1="890.35" x2="64.7" y2="880.96"/>
<line x1="55.3" y1="452.09" x2="64.7" y2="442.7"/>
<text x="52.17" y="666.52" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle" transform="rotate(-90, 52.17, 666.52)">14&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="697.83" y1="948.26" x2="1010.87" y2="948.26"/>
<line x1="693.13" y1="952.96" x2="702.52" y2="943.57"/>
<line x1="1006.17" y1="952.96" x2="1015.57" y2="943.57"/>
<text x="854.35" y="940.43" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle">10&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="1073.48" y1="885.65" x2="1073.48" y2="447.39"/>
<line x1="1068.78" y1="890.35" x2="1078.17" y2="880.96"/>
<line x1="1068.78" y1="452.09" x2="1078.17" y2="442.7"/>
<text x="1065.65" y="666.52" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle" transform="rotate(-90, 1065.65, 666.52)">14&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="498.26" y1="279.13" x2="686.09" y2="279.13"/>
<line x1="493.57" y1="283.83" x2="502.96" y2="274.43"/>
<line x1="681.39" y1="283.83" x2="690.78" y2="274.43"/>
<text x="592.17" y="271.3" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle">6&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="748.7" y1="435.65" x2="748.7" y2="341.74"/>
<line x1="744" y1="440.35" x2="753.39" y2="430.96"/>
<line x1="744" y1="346.43" x2="753.39" y2="337.04"/>
<text x="740.87" y="388.7" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle" transform="rotate(-90, 740.87, 388.7)">3&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="110.87" y1="60" x2="486.52" y2="60"/>
<line x1="106.17" y1="64.7" x2="115.57" y2="55.3"/>
<line x1="481.83" y1="64.7" x2="491.22" y2="55.3"/>
<text x="298.7" y="52.17" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle">12&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="48.26" y1="435.65" x2="48.26" y2="122.61"/>
<line x1="43.57" y1="440.35" x2="52.96" y2="430.96"/>
<line x1="43.57" y1="127.3" x2="52.96" y2="117.91"/>
<text x="40.43" y="279.13" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle" transform="rotate(-90, 40.43, 279.13)">10&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="498.26" y1="48.26" x2="686.09" y2="48.26"/>
<line x1="493.57" y1="52.96" x2="502.96" y2="43.57"/>
<line x1="681.39" y1="52.96" x2="690.78" y2="43.57"/>
<text x="592.17" y="40.43" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle">6&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="748.7" y1="330" x2="748.7" y2="110.87"/>
<line x1="744" y1="334.7" x2="753.39" y2="325.3"/>
<line x1="744" y1="115.57" x2="753.39" y2="106.17"/>
<text x="740.87" y="220.43" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle" transform="rotate(-90, 740.87, 220.43)">7&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="697.83" y1="60" x2="1010.87" y2="60"/>
<line x1="693.13" y1="64.7" x2="702.52" y2="55.3"/>
<line x1="1006.17" y1="64.7" x2="1015.57" y2="55.3"/>
<text x="854.35" y="52.17" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle">10&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="1073.48" y1="435.65" x2="1073.48" y2="122.61"/>
<line x1="1068.78" y1="440.35" x2="1078.17" y2="430.96"/>
<line x1="1068.78" y1="127.3" x2="1078.17" y2="117.91"/>
<text x="1065.65" y="279.13" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle" transform="rotate(-90, 1065.65, 279.13)">10&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="122.61" y1="1121.74" x2="279.13" y2="1121.74"/>
<line x1="117.91" y1="1126.43" x2="127.3" y2="1117.04"/>
<line x1="274.43" y1="1126.43" x2="283.83" y2="1117.04"/>
<text x="200.87" y="1113.91" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle">5&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="60" y1="1059.13" x2="60" y2="902.61"/>
<line x1="55.3" y1="1063.83" x2="64.7" y2="1054.43"/>
<line x1="55.3" y1="907.3" x2="64.7" y2="897.91"/>
<text x="52.17" y="980.87" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="10.96" text-anchor="middle" transform="rotate(-90, 52.17, 980.87)">5&apos;-0&quot;</text>
</g>
</g>
<g class="layer-electrical">
<g class="electrical">
<g class="electrical-panel">
<rect x="701.74" y="830.87" width="31.3" height="46.96" stroke="#000" stroke-width="0.4mm" fill="#fff"/>
<text x="717.39" y="847.3" fill="#000" font-family="sans-serif" font-size="6.89" font-weight="bold" text-anchor="middle" dominant-baseline="central">PANEL</text>
<text x="717.39" y="863.74" fill="#000" font-family="sans-serif" font-size="5.63" text-anchor="middle" dominant-baseline="central">200A</text>
<text x="717.39" y="882.52" fill="#666" font-family="sans-serif" font-size="5.01" text-anchor="middle" dominant-baseline="hanging">Main Panel</text>
</g>
<polyline points="717.39,854.35 404.35,854.35 404.35,666.52" stroke="#333" stroke-width="0.25mm" fill="none"/>
<polyline points="717.39,854.35 842.61,854.35 842.61,666.52" stroke="#333" stroke-width="0.25mm" fill="none"/>
<g class="outlet outlet-duplex">
<circle cx="435.65" cy="894.13" r="10.96" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<line x1="427.98" y1="890.3" x2="443.32" y2="890.3" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="427.98" y1="897.97" x2="443.32" y2="897.97" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="outlet outlet-duplex">
<circle cx="114.13" cy="612.39" r="10.96" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<line x1="106.46" y1="608.56" x2="121.8" y2="608.56" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="106.46" y1="616.23" x2="121.8" y2="616.23" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="outlet outlet-gfci">
<circle cx="791.74" cy="894.13" r="10.96" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="791.74" y="909.78" fill="#000" font-size="7.67" text-anchor="middle" dominant-baseline="hanging">GFI</text>
</g>
<g class="outlet outlet-gfci">
<circle cx="854.35" cy="441.52" r="10.96" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="854.35" y="457.17" fill="#000" font-size="7.67" text-anchor="middle" dominant-baseline="hanging">GFI</text>
</g>
<g class="outlet outlet-duplex">
<circle cx="298.7" cy="114.13" r="10.96" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<line x1="291.03" y1="110.3" x2="306.37" y2="110.3" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="291.03" y1="117.97" x2="306.37" y2="117.97" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="outlet outlet-duplex">
<circle cx="102.39" cy="384.78" r="10.96" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<line x1="94.72" y1="380.95" x2="110.06" y2="380.95" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="94.72" y1="388.62" x2="110.06" y2="388.62" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="outlet outlet-duplex">
<circle cx="854.35" cy="114.13" r="10.96" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<line x1="846.68" y1="110.3" x2="862.02" y2="110.3" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="846.68" y1="117.97" x2="862.02" y2="117.97" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="outlet outlet-duplex">
<circle cx="1019.35" cy="353.48" r="10.96" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<line x1="1011.68" y1="349.64" x2="1027.02" y2="349.64" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="1011.68" y1="357.31" x2="1027.02" y2="357.31" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="outlet outlet-gfci">
<circle cx="691.96" cy="236.09" r="10.96" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="691.96" y="251.74" fill="#000" font-size="7.67" text-anchor="middle" dominant-baseline="hanging">GFI</text>
</g>
<g class="outlet outlet-gfci">
<circle cx="285" cy="996.52" r="10.96" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="285" y="1012.17" fill="#000" font-size="7.67" text-anchor="middle" dominant-baseline="hanging">GFI</text>
</g>
<g class="switch switch-single">
<circle cx="247.83" cy="894.13" r="10.96" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="247.83" y="894.13" fill="#000" font-family="sans-serif" font-size="12.05" font-weight="bold" text-anchor="middle" dominant-baseline="central">S</text>
</g>
<g class="switch switch-single">
<circle cx="691.96" cy="823.04" r="10.96" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="691.96" y="823.04" fill="#000" font-family="sans-serif" font-size="12.05" font-weight="bold" text-anchor="middle" dominant-baseline="central">S</text>
</g>
<g class="switch switch-single">
<circle cx="466.96" cy="441.52" r="10.96" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="466.96" y="441.52" fill="#000" font-family="sans-serif" font-size="12.05" font-weight="bold" text-anchor="middle" dominant-baseline="central">S</text>
</g>
<g class="switch switch-single">
<circle cx="729.13" cy="441.52" r="10.96" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="729.13" y="441.52" fill="#000" font-family="sans-serif" font-size="12.05" font-weight="bold" text-anchor="middle" dominant-baseline="central">S</text>
</g>
<g class="switch switch-single">
<circle cx="639.13" cy="335.87" r="10.96" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="639.13" y="335.87" fill="#000" font-family="sans-serif" font-size="12.05" font-weight="bold" text-anchor="middle" dominant-baseline="central">S</text>
</g>
<g class="light-fixture light-recessed">
<rect x="391.2" y="653.37" width="26.3" height="26.3" stroke="#000" stroke-width="0.3mm" fill="none"/>
<circle cx="404.35" cy="666.52" r="7.67" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="light-fixture light-surface">
<circle cx="842.61" cy="666.52" r="10.96" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="830.99" y1="654.9" x2="834.86" y2="658.77" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="854.23" y1="654.9" x2="850.36" y2="658.77" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="830.99" y1="678.14" x2="834.86" y2="674.27" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="854.23" y1="678.14" x2="850.36" y2="674.27" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="light-fixture light-surface">
<circle cx="310.43" cy="290.87" r="10.96" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="298.81" y1="279.25" x2="302.69" y2="283.12" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="322.06" y1="279.25" x2="318.18" y2="283.12" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="298.81" y1="302.49" x2="302.69" y2="298.62" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="322.06" y1="302.49" x2="318.18" y2="298.62" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="light-fixture light-surface">
<circle cx="842.61" cy="290.87" r="10.96" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="830.99" y1="279.25" x2="834.86" y2="283.12" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="854.23" y1="279.25" x2="850.36" y2="283.12" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="830.99" y1="302.49" x2="834.86" y2="298.62" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="854.23" y1="302.49" x2="850.36" y2="298.62" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="light-fixture light-surface">
<circle cx="592.17" cy="259.57" r="10.96" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="580.55" y1="247.94" x2="584.43" y2="251.82" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="603.8" y1="247.94" x2="599.92" y2="251.82" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="580.55" y1="271.19" x2="584.43" y2="267.31" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="603.8" y1="271.19" x2="599.92" y2="267.31" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="smoke-detector">
<circle cx="404.35" cy="572.61" r="10.96" stroke="#000" stroke-width="0.3mm" fill="none"/>
<text x="404.35" y="572.61" fill="#000" font-family="sans-serif" font-size="9.86" text-anchor="middle" dominant-baseline="central">S/CO</text>
</g>
<g class="smoke-detector">
<circle cx="310.43" cy="290.87" r="10.96" stroke="#000" stroke-width="0.3mm" fill="none"/>
<text x="310.43" y="290.87" fill="#000" font-family="sans-serif" font-size="9.86" text-anchor="middle" dominant-baseline="central">S/CO</text>
</g>
</g>
</g>
<g class="layer-title-block">
<g class="title-block" font-family="'Helvetica','Arial',sans-serif" fill="#000">
<rect x="830" y="1170" width="350" height="140" stroke="#000" stroke-width="0.50" fill="white"/>
<line x1="830" y1="1260" x2="1180" y2="1260" stroke="#000" stroke-width="0.35"/>
<text x="842" y="1194" font-size="18" font-weight="bold">Small Two-Bedroom House</text>
<text x="842" y="1216" font-size="13">456 Oak Avenue, Anytown, ST 12345</text>
<text x="842" y="1236" font-size="13">John Doe</text>
<text x="842" y="1280" font-size="12">Sheet: A1</text>
<text x="1015" y="1280" font-size="12">Date: 2026-02-13</text>
<text x="842" y="1298" font-size="12">Scale: 1/4in = 1ft</text>
<text x="1015" y="1298" fill="#666" font-size="10">FloorScript v0.1</text>
</g>
</g>
</svg>"
`;

exports[`visual regression > renders consistently with options disabled 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 1036.98" width="1200" height="1036.98">
<rect x="0" y="0" width="1200" height="1036.98" fill="white"/>
<g class="layer-structural">
<g class="walls">
<rect x="163.02" y="163.02" width="873.96" height="29.43" stroke="none" fill="#000"/>
<rect x="163.02" y="844.53" width="873.96" height="29.43" stroke="none" fill="#000"/>
<g fill="#000" stroke="none">
<rect x="1007.55" y="681.51" width="29.43" height="163.02"/>
<rect x="1007.55" y="192.45" width="29.43" height="163.02"/>
</g>
<g fill="#000" stroke="none">
<rect x="163.02" y="627.17" width="29.43" height="217.36"/>
<rect x="163.02" y="192.45" width="29.43" height="271.7"/>
</g>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="1014.91" y1="681.51" x2="1014.91" y2="355.47"/>
<line x1="1029.62" y1="681.51" x2="1029.62" y2="355.47"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="163.02" y1="464.15" x2="326.04" y2="464.15"/>
<path d="M 326.04,464.15 A 163.02,163.02 0 0,1 163.02,627.17"/>
</g>
</g>
</svg>"
`;

exports[`visual regression > single-room renders consistently 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 1196.98" width="1200" height="1196.98">
<rect x="0" y="0" width="1200" height="1196.98" fill="white"/>
<g class="layer-structural">
<g class="walls">
<rect x="163.02" y="163.02" width="873.96" height="29.43" stroke="none" fill="#000"/>
<rect x="163.02" y="844.53" width="873.96" height="29.43" stroke="none" fill="#000"/>
<g fill="#000" stroke="none">
<rect x="1007.55" y="681.51" width="29.43" height="163.02"/>
<rect x="1007.55" y="192.45" width="29.43" height="163.02"/>
</g>
<g fill="#000" stroke="none">
<rect x="163.02" y="627.17" width="29.43" height="217.36"/>
<rect x="163.02" y="192.45" width="29.43" height="271.7"/>
</g>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="1014.91" y1="681.51" x2="1014.91" y2="355.47"/>
<line x1="1029.62" y1="681.51" x2="1029.62" y2="355.47"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="163.02" y1="464.15" x2="326.04" y2="464.15"/>
<path d="M 326.04,464.15 A 163.02,163.02 0 0,1 163.02,627.17"/>
</g>
</g>
<g class="layer-labels">
<text x="600" y="518.49" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="27.17" font-weight="500" text-anchor="middle" dominant-baseline="central">Living Room</text>
</g>
<g class="layer-dimensions">
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="192.45" y1="953.21" x2="1007.55" y2="953.21"/>
<line x1="184.3" y1="961.36" x2="200.6" y2="945.06"/>
<line x1="999.4" y1="961.36" x2="1015.7" y2="945.06"/>
<text x="600" y="939.62" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="19.02" text-anchor="middle">15&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="83.77" y1="844.53" x2="83.77" y2="192.45"/>
<line x1="75.62" y1="852.68" x2="91.92" y2="836.38"/>
<line x1="75.62" y1="200.6" x2="91.92" y2="184.3"/>
<text x="70.19" y="518.49" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="19.02" text-anchor="middle" transform="rotate(-90, 70.19, 518.49)">12&apos;-0&quot;</text>
</g>
</g>
<g class="layer-title-block">
<g class="title-block" font-family="'Helvetica','Arial',sans-serif" fill="#000">
<rect x="830" y="1036.98" width="350" height="140" stroke="#000" stroke-width="0.50" fill="white"/>
<line x1="830" y1="1126.98" x2="1180" y2="1126.98" stroke="#000" stroke-width="0.35"/>
<text x="842" y="1060.98" font-size="18" font-weight="bold">Single Room</text>
<text x="842" y="1164.98" font-size="12">Scale: 1/4in = 1ft</text>
<text x="1015" y="1164.98" fill="#666" font-size="10">FloorScript v0.1</text>
</g>
</g>
</svg>"
`;

exports[`visual regression > single-room renders consistently at different widths 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 598.49" width="600" height="598.49">
<rect x="0" y="0" width="600" height="598.49" fill="white"/>
<g class="layer-structural">
<g class="walls">
<rect x="81.51" y="81.51" width="436.98" height="14.72" stroke="none" fill="#000"/>
<rect x="81.51" y="422.26" width="436.98" height="14.72" stroke="none" fill="#000"/>
<g fill="#000" stroke="none">
<rect x="503.77" y="340.75" width="14.72" height="81.51"/>
<rect x="503.77" y="96.23" width="14.72" height="81.51"/>
</g>
<g fill="#000" stroke="none">
<rect x="81.51" y="313.58" width="14.72" height="108.68"/>
<rect x="81.51" y="96.23" width="14.72" height="135.85"/>
</g>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="507.45" y1="340.75" x2="507.45" y2="177.74"/>
<line x1="514.81" y1="340.75" x2="514.81" y2="177.74"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="81.51" y1="232.08" x2="163.02" y2="232.08"/>
<path d="M 163.02,232.08 A 81.51,81.51 0 0,1 81.51,313.58"/>
</g>
</g>
<g class="layer-labels">
<text x="300" y="259.25" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="13.58" font-weight="500" text-anchor="middle" dominant-baseline="central">Living Room</text>
</g>
<g class="layer-dimensions">
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="96.23" y1="476.6" x2="503.77" y2="476.6"/>
<line x1="92.15" y1="480.68" x2="100.3" y2="472.53"/>
<line x1="499.7" y1="480.68" x2="507.85" y2="472.53"/>
<text x="300" y="469.81" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="9.51" text-anchor="middle">15&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="41.89" y1="422.26" x2="41.89" y2="96.23"/>
<line x1="37.81" y1="426.34" x2="45.96" y2="418.19"/>
<line x1="37.81" y1="100.3" x2="45.96" y2="92.15"/>
<text x="35.09" y="259.25" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="9.51" text-anchor="middle" transform="rotate(-90, 35.09, 259.25)">12&apos;-0&quot;</text>
</g>
</g>
<g class="layer-title-block">
<g class="title-block" font-family="'Helvetica','Arial',sans-serif" fill="#000">
<rect x="415" y="518.49" width="175" height="70" stroke="#000" stroke-width="0.25" fill="white"/>
<line x1="415" y1="563.49" x2="590" y2="563.49" stroke="#000" stroke-width="0.17"/>
<text x="421" y="530.49" font-size="9" font-weight="bold">Single Room</text>
<text x="421" y="582.49" font-size="6">Scale: 1/4in = 1ft</text>
<text x="507.5" y="582.49" fill="#666" font-size="5">FloorScript v0.1</text>
</g>
</g>
</svg>"
`;

exports[`visual regression > single-room renders consistently at different widths 2`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2400 2393.96" width="2400" height="2393.96">
<rect x="0" y="0" width="2400" height="2393.96" fill="white"/>
<g class="layer-structural">
<g class="walls">
<rect x="326.04" y="326.04" width="1747.92" height="58.87" stroke="none" fill="#000"/>
<rect x="326.04" y="1689.06" width="1747.92" height="58.87" stroke="none" fill="#000"/>
<g fill="#000" stroke="none">
<rect x="2015.09" y="1363.02" width="58.87" height="326.04"/>
<rect x="2015.09" y="384.91" width="58.87" height="326.04"/>
</g>
<g fill="#000" stroke="none">
<rect x="326.04" y="1254.34" width="58.87" height="434.72"/>
<rect x="326.04" y="384.91" width="58.87" height="543.4"/>
</g>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="2029.81" y1="1363.02" x2="2029.81" y2="710.94"/>
<line x1="2059.25" y1="1363.02" x2="2059.25" y2="710.94"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="326.04" y1="928.3" x2="652.08" y2="928.3"/>
<path d="M 652.08,928.3 A 326.04,326.04 0 0,1 326.04,1254.34"/>
</g>
</g>
<g class="layer-labels">
<text x="1200" y="1036.98" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="54.34" font-weight="500" text-anchor="middle" dominant-baseline="central">Living Room</text>
</g>
<g class="layer-dimensions">
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="384.91" y1="1906.42" x2="2015.09" y2="1906.42"/>
<line x1="368.6" y1="1922.72" x2="401.21" y2="1890.11"/>
<line x1="1998.79" y1="1922.72" x2="2031.4" y2="1890.11"/>
<text x="1200" y="1879.25" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="38.04" text-anchor="middle">15&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="167.55" y1="1689.06" x2="167.55" y2="384.91"/>
<line x1="151.25" y1="1705.36" x2="183.85" y2="1672.75"/>
<line x1="151.25" y1="401.21" x2="183.85" y2="368.6"/>
<text x="140.38" y="1036.98" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="38.04" text-anchor="middle" transform="rotate(-90, 140.38, 1036.98)">12&apos;-0&quot;</text>
</g>
</g>
<g class="layer-title-block">
<g class="title-block" font-family="'Helvetica','Arial',sans-serif" fill="#000">
<rect x="1660" y="2073.96" width="700" height="280" stroke="#000" stroke-width="1.00" fill="white"/>
<line x1="1660" y1="2253.96" x2="2360" y2="2253.96" stroke="#000" stroke-width="0.70"/>
<text x="1684" y="2121.96" font-size="36" font-weight="bold">Single Room</text>
<text x="1684" y="2329.96" font-size="24">Scale: 1/4in = 1ft</text>
<text x="2030" y="2329.96" fill="#666" font-size="20">FloorScript v0.1</text>
</g>
</g>
</svg>"
`;
